--- a/assets/css/login_back.css
+++ b/assets/css/login_back.css
@@ -7,6 +7,22 @@ body {
   background: url('/assets/images/login_bg.jpg') no-repeat center;
   background-size: cover;
 }
+.layui-main {
+  height: 100%;
+  background: url(./assets/images/logo.png) no-repeat;
+}
+.container {
+  width: 400px;
+  height: 310px;
+  background: url(./assets/images/login_title.png) #fff no-repeat center 15px;
+  padding-top: 60px;
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+}
 
 .loginAndRegBox {
   width: 400px;
